<resources>
    <string name="app_name">Preferencias Compartidas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="insert_label">Ingrese los datos</string>
    <string name="hint_string">Ingrese dato String</string>
    <string name="hint_int">Ingrese dato int</string>
    <string name="hint_boolean">Ingrese dato boolean</string>
    <string name="btn_save">Guardar</string>
    
    <string name="btn_clear">Limpiar</string>
    <string name="render_string">El dato String es:</string>
    <string name="render_int">El dato int es:</string>
    <string name="render_boolean">El dato boolean es:</string>

    <string name="no_data">NULL!!!!</string>


    
</resources>
