<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="#ccdd55"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/string_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_string"
                android:layout_weight="1"/>
            <Button
                android:onClick="saveData"
                android:id="@+id/save_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/int_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_int"
                android:layout_weight="1"/>
            <Button
                android:onClick="saveData"
                android:id="@+id/save_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/boolean_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_boolean"
                android:layout_weight="1"/>
            <Button
                android:onClick="saveData"
                android:id="@+id/save_boolean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"/>
            </LinearLayout>

        <Button
            android:onClick="saveData"
            android:id="@+id/save_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#33ddcc">

        <Button
            android:onClick="clearData"
            android:id="@+id/clear_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/render_string"/>
        <TextView
            android:id="@+id/string_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textStyle="bold"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/render_int"/>
        <TextView
            android:id="@+id/int_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/render_boolean"/>
        <TextView
            android:id="@+id/boolean_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="20dp"
            android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>
